--- a/content/Systems/forms.hbs
+++ b/content/Systems/forms.hbs
@@ -28,6 +28,7 @@ page-category: "systems"
 							{{> form__row form__row }}
 
 						</fieldset>
+						{{> form__actions form__actions }}
 					</form>
 
 					<form id="form-example-inline" class="form inline" role="" method="">
