--- a/content/_partials/input__label.hbs
+++ b/content/_partials/input__label.hbs
@@ -1,6 +1,6 @@
 {{#this}}
 	{{#if content.text}}
-		{{#if content.for}}
+		{{#if item.for}}
 			<label
 				{{#if item.for}}for="{{item.for}}"{{/if}}
 				class="input__label{{#if item.modifier}} input__label--{{item.modifier}}{{/if}}
