--- a/content/_partials/form__actions.hbs
+++ b/content/_partials/form__actions.hbs
@@ -1,12 +1,16 @@
 {{#this}}
     <div class="form__actions{{#if item.modifier}} form__actions--{{item.modifier}}{{/if}}{{#if item.offset}} offset{{/if}}{{#if item.disabled}} disabled{{/if}}
 ">
-        {{#if actions.buttons}}
-            {{#each actions.buttons}}
-                {{#this}}
-                    {{> button }}
-                {{/this}}
-            {{/each}}
+        {{#if actions}}
+            {{#each actions}}
+                {{#if buttons}}
+                    {{#each buttons}}
+                        {{#this}}
+                            {{> button }}
+                        {{/this}}
+                    {{/each }}
+                {{/if}}
+            {{/each }}
         {{/if}}
 
         {{#if content.body}}
