--- a/content/_partials/form__label.hbs
+++ b/content/_partials/form__label.hbs
@@ -1,9 +1,10 @@
 {{#this}}
 	{{#if content.text}}
-		{{#if content.for}}
+		{{#if item.for}}
 			<label
 				{{#if item.for}}for="{{item.for}}"{{/if}}
 				class="form__label{{#if item.modifier}} form__label--{{item.modifier}}{{/if}}
+				{{#if item.status}} {{item.status}}{{/if}}
 				{{#if item.disabled}} disabled{{/if}}">
 				{{#if content.icon}}{{#each content.icon}}{{#this}}{{>icon}}{{/this}}{{/each}}{{/if}}
 				<span{{#if item.hidden}} class="hidden-text"{{/if}}>{{{content.text}}}</span>
