Getting there with forms

--- a/content/Systems/forms.hbs
+++ b/content/Systems/forms.hbs
@@ -173,18 +173,39 @@ page-category: "systems"
                         </form>
 
 
-					<form id="form-example-checkboxes" class="form aligned" role="" method="">
-						<fieldset class="form__fieldset">
-						    <legend class="form__legend">Checkbox/Radio Layouts</legend>
+                    <form id="form-example-checkboxes" class="form aligned" role="" method="">
+                        <fieldset class="form__fieldset">
+                            <legend class="form__legend">Checkbox/Radio Layouts</legend>
 
-							[vertical checkbox]
-							[horizontal checkbox]
-							[vertical radio]
-							[horizontal radio]
+                            [vertical checkbox]
+                            [horizontal checkbox]
+                            [vertical radio]
+                            [horizontal radio]
 
 
-						</fieldset>
-					</form>
+                        </fieldset>
+                    </form>
+
+
+                    <form id="form-example-grid" class="form" role="" method="">
+                        <fieldset class="form__fieldset">
+                            <legend class="form__legend">Checkbox/Radio Layouts</legend>
+
+							<div class="g">
+                                <div class="c--1-2">
+
+								</div>
+
+								<div class="c--1-2">
+
+								</div>
+
+
+
+							</div>
+
+                        </fieldset>
+                    </form>
 
 
 		        </div>
