Added google map functionality

--- a/assets/less/variables.less
+++ b/assets/less/variables.less
@@ -199,7 +199,7 @@
 @MODULE-Accordion:              true;
 @MODULE-Alert:                  true;
 @MODULE-Badge:                  true;
-@MODULE-Banner:                    true;
+@MODULE-Banner:                 true;
 @MODULE-Box:                    true;
 @MODULE-Breadcrumbs:            true;
 @MODULE-Browsehappy:            true;
@@ -211,6 +211,7 @@
 @MODULE-Form:                   true;
 @MODULE-Icon:                   true;
 @MODULE-HoverCard:				true;
+@MODULE-Gmap:					true;
 @MODULE-Image:                  true;
 @MODULE-Label:                  true;
 @MODULE-Map:                    true;
