--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -24,6 +24,7 @@
 //@import "base_modules/column.less";
 @import "base_modules/flash.less";
 @import "base_modules/focus.less";
+@import "base_modules/gmap.less";
 @import "base_modules/hovercard.less";
 @import "base_modules/form.less";
 @import "base_modules/icon.less";
