--- a/content/_partials/input__radio.hbs
+++ b/content/_partials/input__radio.hbs
@@ -8,6 +8,7 @@
         {{/each}}
     {{/if}}
 
+    <span class="input{{#if item.modifier}} input--{{item.modifier}}{{/if}}{{#if item.status}} {{item.status}}{{/if}}{{#if item.disabled}} disabled{{/if}}">
     <input
         type="radio"
         class="input__field input__field--radio"
@@ -22,7 +23,7 @@
     />
 
     <label class="input__faux input__faux--radio" for=""{{item.id}}"></label>
-
+    </span>
     {{#if content.notes}}
         {{#each content.notes}}
             {{#this}}
