--- a/content/_partials/input.hbs
+++ b/content/_partials/input.hbs
@@ -8,8 +8,8 @@
         {{/each}}
 
     {{else}}
-        <span class="input{{#if item.modifier}} input--{{item.modifier}}{{/if}}{{#if item.size}} {{item.size}}{{/if}}{{#if item.status}} {{item.status}}{{/if}}{{#if item.disabled}} disabled{{/if}}">
+        <div class="input__wrap{{#if item.modifier}} input__wrap--{{item.modifier}}{{/if}}{{#if item.size}} {{item.size}}{{/if}}">
             {{> input__choose }}
-        </span>
+        </div>
     {{/if}}
 {{/this}}
