--- a/content/_partials/input__email.hbs
+++ b/content/_partials/input__email.hbs
@@ -9,6 +9,7 @@
         {{/each}}
     {{/if}}
 
+    <span class="input{{#if item.modifier}} input--{{item.modifier}}{{/if}}{{#if item.status}} {{item.status}}{{/if}}{{#if item.disabled}} disabled{{/if}}">
     <input
         type="email"
         role="textbox"
@@ -27,7 +28,7 @@
         {{#if content.placeholder}} placeholder="{{content.placeholder}}"{{/if}}
         {{#if content.value}} value="{{content.value}}"{{/if}}
     />
-
+</span>
     {{#if content.notes}}
         {{#each content.notes}}
             {{#this}}
