--- a/content/_partials/input__tel.hbs
+++ b/content/_partials/input__tel.hbs
@@ -7,6 +7,7 @@
             {{/this}}
         {{/each}}
     {{/if}}
+    <span class="input{{#if item.modifier}} input--{{item.modifier}}{{/if}}{{#if item.status}} {{item.status}}{{/if}}{{#if item.disabled}} disabled{{/if}}">
 
     <input
         type="tel"
@@ -25,6 +26,7 @@
         {{#if content.placeholder}} placeholder="{{content.placeholder}}"{{/if}}
         {{#if content.value}} value="{{content.value}}"{{/if}}
     />
+    </span>
 
     {{#if content.notes}}
         {{#each content.notes}}
