--- a/content/_partials/select.hbs
+++ b/content/_partials/select.hbs
@@ -8,37 +8,49 @@
         {{/each}}
     {{/if}}
 
-<select
-    class="input__field input__field--select"
-    {{#if item.multiple}} multiple="multiple"{{/if}}
-    {{#if item.required}} required="required" aria-required="true"{{/if}}
-    {{#if item.disabled}} disabled="disabled" aria-disabled="true"{{/if}}
-    {{#if item.id}} id="{{item.id}}"{{/if}}
-    {{#if item.form}} form="{{item.form}}"{{/if}}
-    {{#if item.name}} name="{{item.name}}"{{/if}}
-    {{#if item.size}} size="{{item.size}}"{{/if}}
-    {{#if item.tabindex}} tabindex="{{item.tabindex}}"{{/if}}
-    {{#if item.accesskey}} accesskey="{{item.accesskey}}"{{/if}}
->
+    <span class="input{{#if item.modifier}} input--{{item.modifier}}{{/if}}{{#if item.status}} {{item.status}}{{/if}}{{#if item.disabled}} disabled{{/if}}">
 
-    {{#if content.optgroups}}
-        {{#each content.optgroups}}
-                {{#this}}
-                {{> select__optgroup}}
-                {{/this}}
+        <select
+            class="input__field input__field--select"
+            {{#if item.multiple}} multiple="multiple"{{/if}}
+            {{#if item.required}} required="required" aria-required="true"{{/if}}
+            {{#if item.disabled}} disabled="disabled" aria-disabled="true"{{/if}}
+            {{#if item.id}} id="{{item.id}}"{{/if}}
+            {{#if item.form}} form="{{item.form}}"{{/if}}
+            {{#if item.name}} name="{{item.name}}"{{/if}}
+            {{#if item.size}} size="{{item.size}}"{{/if}}
+            {{#if item.tabindex}} tabindex="{{item.tabindex}}"{{/if}}
+            {{#if item.accesskey}} accesskey="{{item.accesskey}}"{{/if}}
+        >
+
+            {{#if content.optgroups}}
+                {{#each content.optgroups}}
+                        {{#this}}
+                        {{> select__optgroup}}
+                        {{/this}}
+                {{/each}}
+
+            {{else}}
+
+                {{#if content.options}}
+                    {{#each content.options}}
+                            {{#this}}
+                            {{> select__option}}
+                            {{/this}}
+                    {{/each}}
+                {{/if}}
+
+            {{/if}}
+
+        </select>
+
+    </span>
+
+    {{#if content.notes}}
+        {{#each content.notes}}
+            {{#this}}
+                {{> input__note }}
+            {{/this}}
         {{/each}}
-
-    {{else}}
-
-        {{#if content.options}}
-            {{#each content.options}}
-                    {{#this}}
-                    {{> select__option}}
-                    {{/this}}
-            {{/each}}
-        {{/if}}
-
     {{/if}}
-
-</select>
 {{/this}}
