Cardslider functionality added

--- a/assets/less/variables.less
+++ b/assets/less/variables.less
@@ -205,6 +205,7 @@
 @MODULE-Browsehappy:            true;
 @MODULE-Button:                 true;
 @MODULE-Card:                   true;
+@MODULE-Cardslider:             true;
 @MODULE-Column:                 true;
 @MODULE-Flash:                  true;
 @MODULE-Focus:                  true;
