--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -20,6 +20,7 @@
 @import "base_modules/badge.less";
 @import "base_modules/button.less";
 @import "base_modules/card.less";
+@import "base_modules/cardslider.less";
 @import "base_modules/cite.less";
 //@import "base_modules/column.less";
 @import "base_modules/flash.less";
