--- a/assets/less/variables.less
+++ b/assets/less/variables.less
@@ -216,6 +216,7 @@
 @MODULE-Image:                  true;
 @MODULE-Label:                  true;
 @MODULE-Map:                    true;
+@MODULE-Gridify:                true;
 @MODULE-Media:                  true;
 @MODULE-Modal:                  true;
 @MODULE-Navigation:             true;
