--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -25,6 +25,7 @@
 //@import "base_modules/column.less";
 @import "base_modules/flash.less";
 @import "base_modules/focus.less";
+@import "base_modules/gridify.less";
 @import "base_modules/gmap.less";
 @import "base_modules/hovercard.less";
 @import "base_modules/form.less";
