Getting there with forms

--- a/content/Systems/forms.hbs
+++ b/content/Systems/forms.hbs
@@ -230,7 +230,7 @@ page-category: "systems"
 								{{> form__row form__row--address}}
 								{{> form__row form__row--postcode}}
 
-								{{> button button-submit }}
+								{{> form__actions form__actions }}
 
                             </fieldset>
                         </form>
@@ -238,6 +238,33 @@ page-category: "systems"
 			        </div>
 
 		        </section>
+
+                <section class="section section--example">
+                    <header class="section__head">
+                        <h2 class="section__title">Example: Contact Us</h2>
+                    </header>
+
+                    <div class="section__body">
+                        <!-- code -->
+                        <form id="form-example-address-2" class="form" role="" method="">
+
+                            <fieldset class="form__fieldset">
+                                <legend class="form__legend">Contact Us</legend>
+
+								{{> form__row form__row--name}}
+								{{> form__row form__row--email}}
+								{{> form__row form__row--phone}}
+								{{> form__row form__row--address}}
+								{{> form__row form__row--postcode}}
+
+								{{> form__actions form__actions }}
+
+                            </fieldset>
+                        </form>
+                        <!-- end of code -->
+                    </div>
+
+                </section>
 
 <!-- code -->
 
