Added sticky js for sticky navigation

--- a/content/_partials/ALLOY_navigation.hbs
+++ b/content/_partials/ALLOY_navigation.hbs
@@ -1,4 +1,4 @@
-<div class="w w--nav">
+<div class="w w--nav sticky">
 	<div class="g g--nogutter">
 		<div class="c__lg--1">
 	    	<nav id="navigation" role="navigation" class="drawer">
