--- a/content/_partials/ALLOY_scripts.hbs
+++ b/content/_partials/ALLOY_scripts.hbs
@@ -5,7 +5,7 @@
 <script async defer id="github-bjs" src="//buttons.github.io/buttons.js"></script>
 
 <script type="text/JavaScript">
-	require(["ink", "equalizer"], function() {
+	require(["ink", "equalizer", "sticky"], function() {
 		setTimeout(function(){ 
 			$(".w--foot .panel").equalizer({
 		        minimumWidth: 601,                  // The minimum width at which resizing will still occur
