--- a/content/_layouts/default.hbs
+++ b/content/_layouts/default.hbs
@@ -3,7 +3,7 @@
 <!--[if IE 9]> <html class="no-js ie ie9" lang="en" prefix="og: http://ogp.me/ns#"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en" prefix="og: http://ogp.me/ns#"> <!--<![endif]-->
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
 
     <title>{{ page.title }} - {{ app.title }}</title>
 
