--- a/assets/less/base_modules/rte.less
+++ b/assets/less/base_modules/rte.less
@@ -15,14 +15,6 @@
         ul  {
             ._margin (@TYPE-LineHeight/2, 0);
         }
-
-        &:first-child {
-            margin-top: 0;
-        }
-
-        &:last-child {
-            margin-bottom: 0;
-        }
     }
 
     ul {
@@ -41,6 +33,12 @@
     i,
     em {
 
+    }
+
+    u {
+        text-decoration: none;
+        border-bottom: 3px solid lighten(@COLOR-Base, 20%);
+        box-shadow: inset 0 -3px 0 lighten(@COLOR-Base, 20%);
     }
 
     blockquote {
