--- a/content/Components/tags.hbs
+++ b/content/Components/tags.hbs
@@ -1,5 +1,5 @@
 ---
-title: Boxes
+title: Tags
 
 nav-thumb: "placeholder.jpg"
 nav-title: "Tags"
@@ -21,7 +21,6 @@ page-category: "components"
 <!-- writings -->
 
 		        <div class="page__body rte">
-
 		        </div>
 
 <!-- example -->
@@ -31,10 +30,10 @@ page-category: "components"
 		                <h2 class="section__title">Example</h2>
 		            </header>
 
-		            <div class="section__body">
+		            <div class="section__body c">
 				        <!-- code -->
 
-				        {{!> tag tag }}
+						{{> tag tag }}
 
 				        <!-- end of code -->
 			        </div>
