--- a/content/_partials/ALLOY_scripts.hbs
+++ b/content/_partials/ALLOY_scripts.hbs
@@ -10,7 +10,7 @@
 			$(".w--foot .panel").equalizer({
 		        minimumWidth: 601,                  // The minimum width at which resizing will still occur
 		        applyWhat: "padding-bottom",        // The style to apply the difference in height to
-		        applyTo: ".panel__body",       		// The element on which to apply the style to
+		        applyTo: ".panel__body"       		// The element on which to apply the style to
 			});
 		}, 2000);
 	});
@@ -97,7 +97,7 @@
 		    $(".cardslider .card").equalizer({
 		        minimumWidth: 601,                  // The minimum width at which resizing will still occur
 		        applyWhat: "padding-bottom",        // The style to apply the difference in height to
-		        applyTo: ".card__body",       		// The element on which to apply the style to
+		        applyTo: ".card__body"       		// The element on which to apply the style to
 		    });
 		};
 
@@ -117,7 +117,7 @@
 		    $(".card--gridify").equalizer({
 		        minimumWidth: 601,                  // The minimum width at which resizing will still occur
 		        applyWhat: "padding-bottom",        // The style to apply the difference in height to
-		        applyTo: ".card__body",       		// The element on which to apply the style to
+		        applyTo: ".card__body"       		// The element on which to apply the style to
 		    });
 		};
 
