Modals and config retriever
Added basic functionality for modals, and added configretriever which
will get default settings for js modules from a json store in
assets/data... Try it out on Gmap!

--- a/content/Components/modals.hbs
+++ b/content/Components/modals.hbs
@@ -6,6 +6,7 @@ nav-title: "Modals"
 nav-text: "Modals"
 nav-variant: "modals"
 page-category: "components"
+js-modal: true
 ---
 
 <main class="w w--main">
@@ -33,6 +34,10 @@ page-category: "components"
 
 		            <div class="section__body">
 				        <!-- code -->
+
+				        <a href="#" class="button modal" data-modal='{"content": "<div class=&#39;g&#39;><div class=&#39;c__lg--1&#39;><div class=&#39;panel full&#39;>This is the content inside of the modal from the data-modal attribute of the button!<br/><a href=&#39;#&#39; class=&#39;button close-modal-content&#39;>Close</a></div></div></div>"}'>This example modal</a>
+
+				        <a href="#" class="button modal--alt">Another example</a>
 
 				        <!-- end of code -->
 			        </div>
