--- a/content/_partials/ALLOY_scripts.hbs
+++ b/content/_partials/ALLOY_scripts.hbs
@@ -163,6 +163,26 @@
 </script>
 {{/if}}
 
+{{#if js-modal}}
+<script>
+	require(["modal"], function() {
+		$(".modal--alt").modal({
+            content: '<div class="g"><div class="c__lg--1"><div class="panel full"><h1>A Title</h1>This is another modal! It&#39;s got some content in it...<br>And that content was set in the javascript initialising this button for modal-ing.<br /><a href="#" class="button close-modal-content">Close</a></div></div></div>',
+
+            maskClass: "modal__mask",
+            maskActiveClass: "modal__mask--visible",
+            maskTransitionLength: 500,
+
+            modalClass: "modal__content",
+            modalActiveClass: "modal__content--visible",
+            modalTransitionLength: 250,
+
+            closeButtonSelector: ".close-modal-content"
+		})
+	});
+</script>
+{{/if}}
+
 {{#dev}}
 <script src="http://localhost:35730/livereload.js"></script>
 {{/dev}}
