--- a/assets/less/base_modules/modal.less
+++ b/assets/less/base_modules/modal.less
@@ -13,24 +13,54 @@
 // BASE
 // ----------------------------------------------------
 
-.modal {}
+.modal__content {
+	position: fixed;
+	top: 25%;
+	width: 100%;
+	z-index: @Z-INDEX-Level7;
+	opacity: 0;
+    ._transition (opacity, 0.25s, @ACCORDION-Anim);
+}
+
+.modal__content--visible {
+	opacity: 1;	
+}
 
 /* Accordian headers */
 .modal__mask {
 	background-color: @MODAL-MaskBgColor;
-	height: 100%;
-	width: 100%;
+	height: 0;
+	width: 0;
 	position: fixed;
 	top: 0;
 	left: 0;
 	z-index: @Z-INDEX-Level7;
-	._transition-custom(~"visibility 0 linear .4s,opacity .4s cubic-bezier(.4,0,.2,1)");
-	._transform-custom(~"translateZ(0)");
+	opacity: 0;
+    ._transition (opacity, 0.5s, @ACCORDION-Anim);
 }
 
 .modal__mask--visible {
 	opacity: 1;
 	visibility: visible;
+	height: 100%;
+	width: 100%;
 }
+
+// .modal__mask {
+// 	background-color: @MODAL-MaskBgColor;
+// 	height: 100%;
+// 	width: 100%;
+// 	position: fixed;
+// 	top: 0;
+// 	left: 0;
+// 	z-index: @Z-INDEX-Level7;
+// 	._transition-custom(~"visibility 0 linear .4s,opacity .4s cubic-bezier(.4,0,.2,1)");
+// 	._transform-custom(~"translateZ(0)");
+// }
+
+// .modal__mask--visible {
+// 	opacity: 1;
+// 	visibility: visible;
+// }
 
 } .modal-styles();
