Watchdog and example toasts running

--- a/content/_partials/ALLOY_scripts.hbs
+++ b/content/_partials/ALLOY_scripts.hbs
@@ -183,6 +183,11 @@
 </script>
 {{/if}}
 
+
+<!-- Example functionality -->
+<script>
+	require(["examples/example.watchdog"], function(){ });
+</script>
 {{#dev}}
 <script src="http://localhost:35730/livereload.js"></script>
 {{/dev}}
