Modified Cardslider controls/buttons...
...to allow for more generic controls - can now have a cardslider
control with data attributes to tell cardslider what to do ("previous",
"next", 1, 2, 3, etc), rather than just previous/next.

--- a/content/_partials/cardslider.hbs
+++ b/content/_partials/cardslider.hbs
@@ -12,7 +12,10 @@
 	{{/each}}
 </div>
 
-<a href="#" class="cardslider__control previous">Previous</a>
-<a href="#" class="cardslider__control next">Next</a>
+<a href="#" class="cardslider__control" data-cardslidercontrol="previous">Previous</a>
+<a href="#" class="cardslider__control" data-cardslidercontrol="1">1</a>
+<a href="#" class="cardslider__control" data-cardslidercontrol="2">2</a>
+<a href="#" class="cardslider__control" data-cardslidercontrol="3">3</a>
+<a href="#" class="cardslider__control" data-cardslidercontrol="next">Next</a>
 
 {{/this}}
