cardslider endless scrolling and choose auto dir
Also cardslider now sets "current" on the controls and card so that they
can be manipulated by css if scrolled to.

--- a/assets/less/base_modules/cardslider.less
+++ b/assets/less/base_modules/cardslider.less
@@ -17,6 +17,22 @@
 
     .card {
     	margin-top: 0;
+
+        &.current {
+            .card__front  {
+                background-color: purple;
+            }
+        }
+
+    }
+
+}
+
+.cardslider__control {
+    ._transition (background-color, 0.4s, @ACCORDION-Anim);
+
+    &.current {
+        background-color: purple;   
     }
 }
 
