--- a/content/_partials/cardslider.hbs
+++ b/content/_partials/cardslider.hbs
@@ -16,6 +16,9 @@
 <a href="#" class="cardslider__control" data-cardslidercontrol="1">1</a>
 <a href="#" class="cardslider__control" data-cardslidercontrol="2">2</a>
 <a href="#" class="cardslider__control" data-cardslidercontrol="3">3</a>
+<a href="#" class="cardslider__control" data-cardslidercontrol="4">4</a>
+<a href="#" class="cardslider__control" data-cardslidercontrol="5">5</a>
+<a href="#" class="cardslider__control" data-cardslidercontrol="6">6</a>
 <a href="#" class="cardslider__control" data-cardslidercontrol="next">Next</a>
 
 {{/this}}
