--- a/content/_partials/textarea.hbs
+++ b/content/_partials/textarea.hbs
@@ -1,13 +1,5 @@
 {{#this}}
 
-    {{#if content.labels}}
-        {{#each content.labels}}
-            {{#this}}
-                {{> input__label }}
-            {{/this}}
-        {{/each}}
-    {{/if}}
-
     <span class="input{{#if item.modifier}} input--{{item.modifier}}{{/if}}{{#if item.status}} {{item.status}}{{/if}}{{#if item.disabled}} disabled{{/if}}">
 
     <textarea
@@ -30,16 +22,8 @@
         {{#if item.minlength}} minlength="{{item.minlength}}"{{/if}}
         {{#if item.wrap}} wrap="{{item.wrap}}"{{/if}}
         {{#if content.placeholder}} placeholder="{{content.placeholder}}"{{/if}}
-     />{{{content.text}}}</textarea>
+     >{{{content.text}}}</textarea>
 
     </span>
-
-    {{#if content.notes}}
-        {{#each content.notes}}
-            {{#this}}
-                {{> input__note }}
-            {{/this}}
-        {{/each}}
-    {{/if}}
 
 {{/this}}
