Major toast rack modifications
Rename toast to toastrack, cleaned up all code in toastrack.
Added mustacheretriever to get html from mustache templates when given a
json config.

--- a/content/Components/toasts.hbs
+++ b/content/Components/toasts.hbs
@@ -63,7 +63,7 @@ js-toast: true
 		            	<h2 class="section__title">Example: Toast</h2>
 		            </header>
 					<div class="section__body">
-		            	<a href="#" class="button" data-toast='{"item": {"modifier": "","status": "success"}, "content": {"text": "You did it! A toast that pops up from the bottom of the page!","icon": [{"item": {"modifier": "round52","size": "xlarge"},"content": {"title": "" }}]}}'>Click here to see a live toast</a>
+		            	<a href="#" class="button toast-trigger">Click here to see a live toast</a>
 		            	<!-- end of code -->
 			        </div>
 
